alterada foto perfil

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -18,7 +18,7 @@
 
                 <div class="card card-perfil">
                     <div class="img-card-perfil">
-                        <img src="./imagens.png" alt="Foto de Perfil" class="card-image mx-auto d-block">
+                        <img src="./img.jpg" alt="Foto de Perfil" class="card-image mx-auto d-block">
                     </div>
                     <div class="card-body">
                         <h5 class="card-title" style="text-align: center" id="nome-no-html">
