ajuste do texto de apresentação

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -57,7 +57,7 @@
                         profissional pude aprender e desempenhar diversas atividades no setor administrativo, mas com
                         foco principal na parte de administração de pessoal. Trabalho desde 2009 de lá para cá tive
                         bastante bagagem pois era uma jovem sonhadora que estava sempre em busca do novo, galgando
-                        conhecimento e novas experiências, tentando me encontrar profissionalmente, hoje como mãe e
+                        conhecimento e novas experiências, tentando me encontrar profissionalmente. Hoje como mãe e
                         profissional formada, estou em busca de novos desafios profissionais e também pessoais, pois
                         acredito que um complemanta o outro.
                         Escolhi o mundo da web, para essa nova aventura, pois vejo a profissão de desenvolvedor, como
