alteração no botão projetos

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -31,11 +31,15 @@
                         </p>
                         <div class="botoes-card">
                             <button onclick="clickNoSobre()" class="btn mr-1" id="btn-sobre">Sobre</button>
+                            <button onclick="clickNoProjetos()" class="btn mr-1" id="btn-projeto">Projetos</button>
                         </div>
                         <div class="icon-redes-sociais">
                             <div class="links-redes-sociais mt-2">
                                 <a href="https://www.facebook.com/luisa.drumn/">
                                     <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/luisa-drumn-da-silva-vanzin-410ba0158">
                                     <i class="fab fa-linkedin"></i>
@@ -77,6 +81,8 @@
                 </div>
 
                 <div class="text" id="texto-2">
+                    <h1 class="title-text">Projetos</h1>
+                    <h4 class="title-subtitle">Alguns Projetos que Trabalhei</h4>
                     <p>
                         <a target="_blank" href="https://www.growdev.com.br">Site da Growdev - Este site foi
                             desenvilvido em ReactJS.</a>
@@ -104,7 +110,9 @@
                     <a href="https://www.facebook.com/luisa.drumn/">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
                     <a href="https://www.linkedin.com/in/luisa-drumn-da-silva-vanzin-410ba0158">
                         <i class="fab fa-linkedin"></i>
                     </a>
